# spark-demo

./: .drone.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
app/: __init__.py  config.py  run.py  schemas.py  settings.toml  udfs.py
app/utils/: databricks_pushgateway_exporter.py  graceful_exit.py  kafka_offsets_reporter.py
deploy/: pip.config
deploy/databricks/: deploy-job.sh  init-script.sh
deploy/local/: input.json
deploy/local/app/: docker-compose.yml  local.env
deploy/local/kafka/: docker-compose.yml
test/: conftest.py  requirements.txt  test_udf_generate_result_message.py  test_udf_process.py
