[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 120
exclude = .git,.hg,.svn,test/*,setup.py,__pycache__
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore =
    E203,E305,E402,E501,E721,E741,F403,F405,F821,F841,F999,W503,W504,C408,W291,E303,
    # these ignores are from flake8-bugbear; please fix!
    B007,B008,
    # these ignores are from flake8-comprehensions; please fix!
    C400,C401,C402,C403,C404,C405,C407,C411,

[metadata]
description-file = README.md

[isort]
line_length=120
known_future_library=future,pies
known_standard_library=std,std2
known_third_party = confluent_kafka,dynaconf,pyspark,pytest,setuptools,spacy
indent='    '
multi_line_output=3
length_sort=1
#forced_separate=django.contrib,django.utils
default_section=FIRSTPARTY
no_lines_before=LOCALFOLDER
